{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 81,
  "lineage": "bef0539c-b124-1eec-8e31-a8ea096aa548",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "eVision_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:564571135814:loadbalancer/app/eVision-lb-tf/78429097029bce8e",
            "arn_suffix": "app/eVision-lb-tf/78429097029bce8e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "eVision-lb-tf-1889704731.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:564571135814:loadbalancer/app/eVision-lb-tf/78429097029bce8e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "eVision-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01e3366c2415629a6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b083bbf28e9f806a"
              },
              {
                "subnet_id": "subnet-0d7c7aebbe7de53a8"
              },
              {
                "subnet_id": "subnet-0f5126090bd36b4a5"
              }
            ],
            "subnets": [
              "subnet-0b083bbf28e9f806a",
              "subnet-0d7c7aebbe7de53a8",
              "subnet-0f5126090bd36b4a5"
            ],
            "vpc_id": "vpc-03e54d41b004a16bc",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_default_subnet.eVision_default_subnet_a",
            "aws_default_subnet.eVision_default_subnet_b",
            "aws_default_subnet.eVision_default_subnet_c",
            "aws_security_group.eVision_lb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "eVision_default_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564571135814:subnet/subnet-0b083bbf28e9f806a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0b083bbf28e9f806a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "564571135814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03e54d41b004a16bc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "eVision_default_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564571135814:subnet/subnet-0f5126090bd36b4a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0f5126090bd36b4a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "564571135814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03e54d41b004a16bc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "eVision_default_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564571135814:subnet/subnet-0d7c7aebbe7de53a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0d7c7aebbe7de53a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "564571135814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03e54d41b004a16bc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "eVision_default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564571135814:vpc/vpc-03e54d41b004a16bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0f78894d2c03f0b5d",
            "default_route_table_id": "rtb-0763a777e3767aea7",
            "default_security_group_id": "sg-0e1db63dc7e5c3e4d",
            "dhcp_options_id": "dopt-0ad6fcbd55ff5c780",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-03e54d41b004a16bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0763a777e3767aea7",
            "owner_id": "564571135814"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "eVision_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:564571135814:listener/app/eVision-lb-tf/78429097029bce8e/634d3f9fe7da2a58",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:564571135814:targetgroup/eVision-target-group/f22c034f67907b5a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:564571135814:listener/app/eVision-lb-tf/78429097029bce8e/634d3f9fe7da2a58",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:564571135814:loadbalancer/app/eVision-lb-tf/78429097029bce8e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.eVision_alb",
            "aws_default_subnet.eVision_default_subnet_a",
            "aws_default_subnet.eVision_default_subnet_b",
            "aws_default_subnet.eVision_default_subnet_c",
            "aws_default_vpc.eVision_default_vpc",
            "aws_lb_target_group.eVision_target_group",
            "aws_security_group.eVision_lb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "eVision_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:564571135814:targetgroup/eVision-target-group/f22c034f67907b5a",
            "arn_suffix": "targetgroup/eVision-target-group/f22c034f67907b5a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/success",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:564571135814:targetgroup/eVision-target-group/f22c034f67907b5a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "eVision-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03e54d41b004a16bc"
          },
          "dependencies": [
            "aws_default_vpc.eVision_default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eVision_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564571135814:security-group/sg-01e3366c2415629a6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e3366c2415629a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20221014141620683300000001",
            "name_prefix": "terraform-",
            "owner_id": "564571135814",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03e54d41b004a16bc"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eVision_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564571135814:security-group/sg-0938b23b3132d884f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0938b23b3132d884f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-01e3366c2415629a6"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20221014141625260300000002",
            "name_prefix": "terraform-",
            "owner_id": "564571135814",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03e54d41b004a16bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eVision_lb_sg"
          ]
        }
      ]
    }
  ]
}